# flashcards

./: .gitignore  README.md  features.md
backend/: Cargo.toml
backend/src/: db.rs  db_haiku.rs  handler.rs  handler_haiku.rs  kanjialiveapi.rs  kanjiapi.rs  main.rs
common/: Cargo.toml
common/src/: haiku.rs  language.rs  lib.rs  word.rs
docker/: .dockerignore  Dockerfile_backend  Dockerfile_frontend  Dockerfile_rustYew  build.sh  database_backup.sql  db.sql  docker-compose-sample.yml  nginx_enigma_docker.conf  serve.py
frontend/: Cargo.toml  Trunk.toml  cards.scss  haiku.scss  index.html  left_nav.scss  styles.scss
frontend/src/: app.rs  lib.rs
frontend/src/components/: nav.rs
frontend/src/pages/: .trash  _home.rs  dictionary.rs  form.rs  haiku_display.rs  haiku_form.rs  haiku_line_form.rs  haiku_svg.rs  haikus.rs  hovered.rs  mod.rs  page_not_found.rs  random_serie.rs  subform.rs
