[package]
name = "backend"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
dotenvy = "0.15"
mysql = "26.0.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }

warp = { version = "0.4.2", features = ["server"] }
reqwest = { version = "0.12.24", features = ["json", "stream"] }

lazy_static = "1.5.0"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde-xml-rs = "0.8.2"
thiserror = "2.0.17"
chrono = "0.4.37"
rand = "0.9.2"
common = { version = "0.1.0", path = "../common" }
rust-translate = "0.1.3"
itertools = "0.14.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
