[package]
name = "function_router"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }


yew = { version = "0.22", features = ["csr", "serde"] }
yew-router = "0.19.0"

wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.105"
wasm-logger = "0.2"
log = "0.4"

serde_json = "1.0.148"
serde = { version = "1.0.152", features = ["derive"] }
itertools = "0.14.0"
gloo-net = "0.6.0"
gloo = "0.11"
implicit-clone = "0.6.0"

reqwest = { version = "0.12.24", features = ["json", "stream"] }
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }

#rand = "0.9.2"

#[lib]
#crate-type = ["cdylib", "rlib"]
js-sys = "0.3"


[[bin]]
name = "function_router"
required-features = ["yew/csr"]
